syntax = "proto3";
package pb;
option go_package = "./pb";

message Ping {}
message Pong {}

message Static {
  string chat_id = 1;
  string prev_message_id = 2;
  string message_id = 3;
  string mimeType = 4;
  string author_id = 5;
  bytes data = 6;
}

message StaticResendRequest {
  string chat_id = 1;
  string message_id = 2;
}

message StreamInfo {
  enum Status {
    ACTIVE = 0;
    STOP = 1;
  }
  Status status = 1;
  string chat_id = 2;
}

message StreamInfoResponse {
  enum Answer {
    ENTER = 0;
    LEAVE = 1;
  }
  Answer answer = 1;
  string chat_id = 2;
}

message StreamChunk {
  bool is_init = 1;
  string chat_id = 2;
  uint32 seq_number = 3;
  bytes offset = 4;
  bytes data = 5;
}

message DataPacket {
  oneof msg {
    Static static = 1;
    StaticResendRequest resend_static = 2;
    StreamInfo stream_info = 3;
    StreamInfoResponse stream_info_response = 4;
    StreamChunk stream_chunk = 5;
    Ping ping = 6;
    Pong pong = 7;
  }
}
